# cicero.ai

./: .gitattributes  .gitignore  settings.gradle.kts
.github/workflows/: cmake-single-platform.yml
app/: build.gradle.kts
app/src/androidTest/java/com/cicero/ciceroai/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.txt
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
app/src/main/java/com/cicero/ciceroai/: MainActivity.kt  MainUiState.kt  MainViewModel.kt  TokenBudget.kt
app/src/main/java/com/cicero/ciceroai/llama/: LlamaBridge.kt  LlamaConfigs.kt  LlamaController.kt  ModelAssetManager.kt
app/src/main/java/com/cicero/ciceroai/settings/: PresetOption.kt  SettingsConfig.kt  SettingsDataStore.kt  SettingsRepository.kt
app/src/main/res/drawable/: ic_content_copy.xml  ic_download.xml  ic_menu.xml  ic_send.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  plurals.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cicero/ciceroai/: ExampleUnitTest.kt  TokenBudgetTest.kt
docs/: llama_cpp_integration_review.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
